(ENHANCE) Port the error that appears when parsing a file fails to ttk_dialog
(INTERNAL) Removed tk_dialog_with_widgets as it is no longer used
(BUGFIX) Used ttk_dialog_with_widgets without putting the namespace
(ENHANCE) Made the "Source-Navigator has found more than one match" warning use ttk_dialog_with_widges
(ENHANCE) Made sn_error_dialog use TtkDialog::MessageBox
(INTERNAL) Port sn_wait_dialog to use sn_ttk_buttons
(ENHANCE) Port the "About" dialog to Ttk
(BUGFIX) Forgot that someone may want to resize the "Abbreviations" dialog
(ENHANCE) Port the "Abbreviations" dialog to Ttk, now with scrollbar
(ENHANCE) Port the 'Find-Replace' dialog to Ttk
(ENHANCE) Port the 'Find dialog' to Ttk
(ENHANCE) Port the 'go to line' dialog to Ttk
(ENHANCE) Port the window with the progressbar when creating a new project
(ENHANCE) Port Tk's choose color dialog to Ttk Widgets
(ENHANCE) Port the 'preferences' dialog to Ttk widgets
(BUGFIX) Fix the 'Delete' button in the start dialog in Windows
(BUGFIX) Fix the way the Tree widget talks to vertical Ttk scrollbars
(ENHANCE) Port the 'choose directory' dialog to Ttk widgets
(INTERNAL) Create a sn_ttk_buttons proc to substitute sn_motif_buttons
(INTERNAL) Change the dialog that pops up with Tcl/Tk errors to Ttk
(ENHANCE) Ported the 'delete project' question dialog to Ttk
(ENHANCE) Ported the 'new project' dialog to use Ttk widgets
(ENHANCE) Update the project management window to use Ttk widgets
(INTERNAL) Add tile extension for Ttk widgets support
(BUGFIX) Fix cancelling in Windows the choose font dialog
(ENHANCE) Use tk_chooseColor
(ENHANCE) Simplify the dialog to choose fonts and add all the available ones
(BUGFIX) Fix the auto selection when "}" or "]" are typed
(BUGFIX) Double click to the right of "{}()<>[]" selects the content
(ENHANCE) Configure will add TruType support by default
(INTERNAL) Remove code to support old Tcl/Tk versions
(INTERNAL) Remove direct access to interp->result